<resources>
    <string name="app_name">MercadoLivreTeste</string>

    <string name="txt_pequisa">Buscar no Mercado Livre</string>
    <string name="txt_localizacao"> Enviar para Arthur Ferreira - Rua X 14</string>
    <string name="txt_titulo_ultimo_visto">Inspirado no último visto</string>
    <string name="txt_ver_mais">Ver mais</string>
    <string name="txt_compre_mais">Compre ainda mais...</string>
</resources>