<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    tools:context=".MainActivity">

    <View
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@color/yellow_200"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <androidx.appcompat.widget.SearchView
        android:id="@+id/pesquisa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_search_view"
        app:defaultQueryHint="@string/txt_pequisa"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintTop_toTopOf="@id/header"
        app:layout_constraintStart_toStartOf="@id/header"
        app:layout_constraintEnd_toEndOf="@id/icCompras"
        />

    <ImageView
        android:id="@+id/icCompras"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_cart"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toTopOf="@id/header"
        app:layout_constraintStart_toEndOf="@id/pesquisa"
        app:layout_constraintEnd_toEndOf="@id/header"/>

    <ImageView
        android:id="@+id/icLocalizacao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_location"
        android:layout_margin="20dp"
        app:layout_constraintStart_toStartOf="@id/header"
        app:layout_constraintTop_toBottomOf="@id/pesquisa"
        app:layout_constraintBottom_toBottomOf="@id/header"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_localizacao"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/pesquisa"
        app:layout_constraintStart_toEndOf="@id/icLocalizacao"
        app:layout_constraintEnd_toEndOf="@id/header"
        app:layout_constraintBottom_toBottomOf="@id/header"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewAnuncios"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <LinearLayout
        android:id="@+id/containerProdutos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/bg_container_produtos"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/recyclerViewAnuncios"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_titulo_ultimo_visto"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_margin="10dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewProdutos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_ver_mais"
            android:textSize="16sp"
            android:textColor="@color/dark_blue"
            android:textStyle="bold"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="20dp"
            />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_compre_mais"
        android:textSize="16sp"
        android:textColor="@color/dark_blue"
        android:textStyle="bold"
        android:layout_margin="30dp"
        app:layout_constraintTop_toBottomOf="@id/containerProdutos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>